# mini-agent

./: .env.example  .gitignore  LICENSE  README.md  agent.py  cli.py  config.py  conversation.py  logging_config.py  main.py  model_client.py  pyproject.toml  registry.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INTERVIEW.md  PUBLISH_CHECKLIST.md
evals/: __init__.py  cases.json  evaluator.py  run.py
tests/: fakes.py  test_agent.py  test_cli.py  test_evaluator.py  test_registry.py  test_search_notes.py  test_system_prompt.py
tools/: base.py  calculator.py  current_time.py  search_notes.py
