[project]
name = "mini-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.21",
]
