[project]
name = "mini-agent"
version = "0.1.0"
description = "A minimal, testable and evaluable tool-calling agent in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
    "rich>=15.0.0",
    "tzdata>=2026.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.21",
]
